gitops/4_demo-pod-info/deployment.yaml
# 2. L'application de démo (Podinfo est génial pour ça)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
spec:
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
        - name: podinfo
          image: stefanprodan/podinfo
          ports:
            - containerPort: 9898
