gitops/4_demo-pod-info/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: demo-prive
spec:
  ports:
    - port: 9898
      targetPort: 9898
  selector:
    app: podinfo
